--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -105,6 +105,9 @@ ar:
     newemp: اضافة موظف جديد
     newtar: إضافة هدف جديد
     newteam: اضافة فريق جديد
+    remember_me: تذكرني
+    Forget: نسيت كلمه المرور؟ 
+    Image: الصوره
 
 
 
