--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -108,3 +108,6 @@ en:
     newemp: Add New Employee
     newtar: Add New Target
     newteam: Add New Team
+    remember_me:  Remember Me
+    Forget: Forgot your password?
+    Image: Image
