Header and side nav bar, footer added

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1,5 +1,5 @@
 ar:
-  hello: "مرحبًا بكم في نظام إدارة موظفي الموارد البشرية"
+  hello: "مرحبًا بكم في نظام إدارة الموارد البشرية"
   users:
     index:
       users: "المستخدمون"
